--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ DB_USER=postgres
 DB_PASSWORD=admin
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=pessoas_api	
+DB_DATABASE=pessoas_api
+NODE_ENV=development
